--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,8 +36,8 @@ button {
     align-items: center;
     justify-content: center;
     position: absolute;
-    right:    0;
     bottom:   0;
+    top: 0;
     background-color: transparent;
 }
 /* cannot get button overlay .lighton & section.  removed switch text to prep for that
