--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ section {
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 5px;
+    border: 1px;
 }
 button {
     height: 666px;
@@ -40,5 +41,3 @@ button {
     top: 0;
     background-color: transparent;
 }
-/* cannot get button overlay .lighton & section.  removed switch text to prep for that
- */
